updates page with new design,except demp section

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "fusioncharts": "^3.12.2",
     "prismjs": "^1.15.0",
     "react": "^16.4.1",
+    "react-codemirror": "^1.0.0",
     "react-dom": "^16.4.1",
     "react-fusioncharts": "^1.0.5",
     "react-router-dom": "^4.3.1",
