--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "bootstrap": "^4.1.2",
     "fusioncharts": "git+ssh://git@bitbucket.org/fusioncharts/fusioncharts-npm.git",
