--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "homepage": ".",
   "dependencies": {
     "bootstrap": "^4.1.2",
-    "fusioncharts": "git+ssh://git@bitbucket.org/fusioncharts/fusioncharts-npm.git",
+    "fusioncharts": "^3.13.0",
     "prismjs": "^1.15.0",
     "react": "^16.4.1",
     "react-codemirror": "^1.0.0",
     "react-codemirror2": "^5.1.0",
     "react-dom": "^16.4.1",
-    "react-fusioncharts": "git+https://git@github.com/fusioncharts/react-fusioncharts-component.git#develop",
+    "react-fusioncharts": "^2.0.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4"
   },
