--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "private": true,
   "homepage": ".",
   "dependencies": {
-    "bootstrap": "^4.1.2",
-    "fusioncharts": "^3.13.0",
+    "bootstrap": "^4.1.3",
+    "fusioncharts": "^3.13.1",
     "prismjs": "^1.15.0",
-    "react": "^16.4.1",
+    "react": "^16.4.2",
     "react-codemirror": "^1.0.0",
     "react-codemirror2": "^5.1.0",
-    "react-dom": "^16.4.1",
-    "react-fusioncharts": "^2.0.1",
+    "react-dom": "^16.4.2",
+    "react-fusioncharts": "git+https://git@github.com/fusioncharts/react-fusioncharts-component.git#develop",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4"
   },
